去掉廉政头条

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,10 @@ spring.datasource.password = 123456
 #spring.datasource.password = ncgyy123
 #spring.datasource.username = root
 
+#spring.datasource.url = jdbc:mysql://localhost:3306/gcjw?useSSL=false
+#spring.datasource.username = root
+#spring.datasource.password = hm0791soft
+
 customize.path.upload = /storage/gcjw
 customize.path.attachment = /file/{yyyy}{mm}{dd}/{time}{rand:6}
 customize.path.image = /image/{yyyy}{mm}{dd}/{time}{rand:6}
