--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,13 @@ server.port = 8080
 server.contextPath = /gcjw
 
 # dataSource
-spring.datasource.url = jdbc:mysql://localhost:3306/gcjw?useSSL=false
-spring.datasource.username = root
-spring.datasource.password = 123456
-
 #spring.datasource.url = jdbc:mysql://localhost:3306/gcjw?useSSL=false
 #spring.datasource.username = root
-#spring.datasource.password = hm0791soft
+#spring.datasource.password = 123456
+
+spring.datasource.url = jdbc:mysql://localhost:3306/gcjw?useSSL=false
+spring.datasource.username = root
+spring.datasource.password = hm0791soft
 
 customize.path.upload = /storage/gcjw
 customize.path.attachment = /file/{yyyy}{mm}{dd}/{time}{rand:6}
